--- a/Отчёт по Л.р. N3.md
+++ b/Отчёт по Л.р. N3.md
@@ -113,7 +113,7 @@
             <p class="up8">8</p>
         </header>
         <main>
-            <section class="block1">
+            <div class="block1">
                 <p class="blue"></p>
                 <ul class="menu">
                     <li><img src="./Images/slot1.svg" alt="Assassin"></li>
@@ -122,7 +122,7 @@
                     <li><img src="./Images/slot4.svg" alt="Secret"></li>
                     <li><img src="./Images/slot5.svg" alt="WW"></li>
                 </ul>
-                <section>
+                <div>
                     <img src="Images/Grad_Black.svg" alt="bg" class="bg_gr_black1">
                     <img src="Images/Grad_Black.svg" alt="bg" class="bg_gr_black2">
                     <img src="Images/Grad_Black.svg" alt="bg" class="bg_gr_black3">
@@ -133,16 +133,16 @@
                     <img src="./Images/Shape3.svg" alt="Shape3" class="Shape3">
                     <img src="./Images/Shape4.svg" alt="Shape4" class="Shape4">
                     <img src="./Images/Shape.svg" alt="Shape" class="Ticket_Shape">
-                </section>
-                <section>
+                </div>
+                <div>
                     <p class="next"></p>
                     <img src="Images/Next.svg" alt="Next" class="Button_Next">
-                </section>
+                </div>
     
-            </section>
-            <section class="block2">
+            </div>
+            <div class="block2">
                 <p class="Orange_line"></p>
-                <section class="JasonBourne">
+                <div class="JasonBourne">
                     <img src="./Images/Bourne.svg" alt="Bourne" class="Bourne">
                     <img src="./Images/Shape5.1.svg" alt="Shape5" class="Shape5">
                     <ul class="Bourne_img">
@@ -155,7 +155,7 @@
                     </ul>
                     <img src="./Images/Group12.svg" alt="Group12" class="Group12">
                     <img src="./Images/Group13.svg" alt="Group13" class="Group13">
-                </section>
+                </div>
                 <div class="JasonBourne_video">
                     <img src="./Images/JasonBourne2016.svg" alt="JasonBourne2016" class="JasonBourne2016">
                     <p class="Shadow"></p>
@@ -172,7 +172,7 @@
                     <img src="./Images/Dot1.svg" class="dot6" alt="Dot">
                     <img src="./Images/Dot1.svg" class="dot7" alt="Dot">
                 </div>
-            </section>
+            </div>
             <div class="block3">
                 <div class="Last_News">
                     <ul class="news_img">
@@ -214,6 +214,31 @@
             <p class="line1">
             <div class="block4">
                 <div class="Top250">
+                    <ul class="img_TOP250">
+                        <li><img src="./Images/top1.svg" alt="top"></li>
+                        <li><img src="./Images/top2.svg" alt="top"></li>
+                        <li><img src="./Images/top3.svg" alt="top"></li>
+                        <li><img src="./Images/top4.svg" alt="top"></li>
+                        <li><img src="./Images/top5.svg" alt="top"></li>
+                        <li><img src="./Images/top6.svg" alt="top"></li>
+                    </ul>
+                </div>
+                <div class="randommovie">
+                    <div class="poster">
+                        <img src="./Images/Guardians.svg" alt="img">
+                        <p class="shadow1"></p>
+                        <img src="./Images/tag1.svg" class="tag1" alt="tag1">
+                        <img src="./Images/tag2.svg" class="tag2" alt="tag1">
+                        <img src="./Images/tag3.svg" class="tag3" alt="tag1">
+                        <img src="./Images/tag4.svg" class="tag4" alt="tag1">
+                        <img src="./Images/tag5.svg" class="tag5" alt="tag1">
+                        <img src="./Images/tag6.svg" class="tag6" alt="tag1">
+                        <div class="randombutton">
+                            <img src="./Images/Arrow.svg" class="arrow" alt="img">
+                        </div>
+                    </div>
+                </div>
+                <div class="Box_office">
                     <ul class="img_Box_office">
                         <li><img src="./Images/box1.svg" alt="box"></li>
                         <li><img src="./Images/box2.svg" alt="box"></li>
@@ -285,6 +310,8 @@
     </div>
     </body>
     </html>
+
+
 
 
 
